--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   flutter_svg: ^2.0.7
   flutter_slidable: ^3.0.0
   lottie: ^2.4.0
-
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
