--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_slidable: ^3.0.0
   lottie: ^2.4.0
   dio: ^5.2.1+1
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
